fix: TMP-151 - chanes in style - word-wrap

--- a/RaccoonBlog.Web/Content/css/styles.less
+++ b/RaccoonBlog.Web/Content/css/styles.less
@@ -973,6 +973,7 @@ article {
 blockquote {
 	background-color:@gray-lighter;
 	border-left:3px solid @brand-primary;
+    word-wrap: break-word;
 }
 
 pre {
@@ -1260,7 +1261,7 @@ transform: none;
 			.comment-body {
 				
 
-				
+				word-wrap: break-word;
 				background-color:@gray-lighter;
 				padding:15px;
 				clear:both;
